--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -2,7 +2,7 @@
   "name": "@repo/backend-common",
   "version": "1.0.0",
   "main": "index.js",
-  "exports":{
+  "exports": {
     "./config": "./src/common.ts"
   },
   "scripts": {
@@ -14,5 +14,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/dotenv": "^8.2.3",
+    "dotenv": "^17.2.3"
+  }
 }
