--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "database",
+  "name": "@repo/database",
   "version": "1.0.0",
   "main": "index.js",
+  "exports":{
+    "./database": "./src/database.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
