--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -17,6 +17,7 @@
     "@repo/database": "workspace:*",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "ws": "^8.18.3"
   },
   "devDependencies": {
