--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -1,22 +1,23 @@
 {
   "name": "@repo/backend-common",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "exports": {
     "./config": "./src/common.ts"
   },
   "scripts": {
+    "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/dotenv": "^8.2.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@types/dotenv": "^8.2.3",
-    "dotenv": "^17.2.3"
-  }
+  "description": ""
 }
