--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@repo/database",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/database.js",
   "exports":{
     "./database": "./src/database.js"
   },
   "scripts": {
+    "build": "tsc -b && prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "prisma": "^6.16.3"
   },
+  "dependencies": {
+    "@prisma/client": "^6.16.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@prisma/client": "^6.16.3",
-    "init": "^0.1.2"
-  }
+  "description": ""
 }
