containerised-for-build

--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -1,9 +1,10 @@
 {
+    "type": "module",
   "name": "@repo/backend-common",
   "version": "1.0.0",
-  "main": "./dist/index.js",
+  "main": "./dist/common.js",
   "exports": {
-    "./config": "./src/common.ts"
+    "./config": "./dist/common.js"
   },
   "scripts": {
     "build": "tsc -b",
